# pipeline-template

./: README.md  cookiecutter.json
pipeline-{{cookiecutter.project_name}}/: README.md  pyproject.toml
pipeline-{{cookiecutter.project_name}}/.dvc/: config
